# AMD-AI-Compute-Observatory

./: .dockerignore  .gitattributes  .gitignore  AUTHORS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  aaco.spec  build_exe.bat  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml  test_output.xml
.github/: CODEOWNERS
.github/workflows/: ci-cd.yml  ci.yml
aaco/: README.md  __init__.py  __main__.py  cli.py
aaco/analytics/: README.md  __init__.py  attribution.py  batch_scaler.py  chi.py  classify.py  diff.py  feature_store.py  kernel_fingerprint.py  launch_tax.py  metrics.py  perfetto_export.py  recommendation_engine.py  regression_guard.py  root_cause.py  timeline.py  trace_events.py
aaco/attribution/: __init__.py  attribution_engine.py  calibration.py  counter_model.py  probabilistic_engine.py  roofline.py
aaco/autoopt/: __init__.py  code_generator.py  optimization_rule.py  optimizer.py  rule_engine.py
aaco/calibration/: README.md  __init__.py  envelope.py
aaco/capsule/: __init__.py  capsule_v2.py  clock_policy.py  noise_sentinel_v2.py  thermal_guard.py  topology.py
aaco/collectors/: README.md  __init__.py  clocks.py  driver_interface.py  rocm_smi_sampler.py  sys_sampler.py
aaco/compiler/: __init__.py  compiler_ir.py  graph_analyzer.py  graph_kernel_mapper.py  optimization_tracker.py
aaco/core/: README.md  __init__.py  schema.py  session.py  utils.py
aaco/dashboard/: __init__.py  app.py
aaco/driver/: Makefile  __init__.py  aaco_driver.c  aaco_driver.h  python_bindings.py
aaco/envelope/: __init__.py  constraint_solver.py  envelope.py  gpu_model.py  simulator.py
aaco/experiment/: __init__.py  auto_tune.py
aaco/fleet/: __init__.py  aggregator.py  fleet_manager.py  fleet_ops.py  health_monitor.py  job_scheduler.py
aaco/forensics/: __init__.py  analyzer.py  bundle.py  collector.py  exporter.py  scheduler_model.py
aaco/governance/: README.md  __init__.py  baseline_manager.py  bayesian_engine.py  ci_integration.py  regression_detector.py  regression_governor.py  sla_engine.py
aaco/graph/: __init__.py  extractor.py  mapper.py
aaco/isolation/: __init__.py  capsule.py  noise_sentinel.py
aaco/kff/: __init__.py  advanced_fingerprint.py  family_classifier.py  fusion_detector.py  kernel_fingerprint.py  perf_counters.py  rocprof_integration.py
aaco/laboratory/: README.md  __init__.py  capsule_manager.py  execution_capsule.py  isolation_controller.py  noise_sentinel.py  stability_validator.py  thermal_guard.py
aaco/optimizer/: __init__.py  auto_optimizer.py
aaco/profiler/: README.md  __init__.py  rocprof_parse.py  rocprof_wrap.py
aaco/report/: README.md  __init__.py  plots.py  render.py
aaco/report/templates/: regression.html  report.html
aaco/rootcause/: __init__.py  cause_ranker.py  evidence_collector.py  explanation_generator.py  root_cause_analyzer.py
aaco/runner/: README.md  __init__.py  llm_profiler.py  model_registry.py  ort_runner.py
aaco/runner/models/: README.md  bert_base.json  llama2_7b.json  resnet50.json
aaco/trace_lake/: __init__.py  unified_trace.py
aaco/tracelake/: README.md  __init__.py  parquet_store.py  perfetto_lake.py  trace_merger.py  trace_query.py  track_registry.py
aaco/twin/: __init__.py  hardware_envelope.py
aaco/warehouse/: __init__.py  store.py
api/analytics/: index.html
api/cli/: index.html
api/collectors/: index.html
api/core/: index.html
architecture/: index.html
baselines/: README.md  mi300x_llama2_7b.json  mi300x_resnet50.json
configs/: backends.yaml  models.yaml
diagrams/: README.md
docs/: architecture.md  bottleneck_taxonomy.md  data_schema.md  index.md  methodology.md
docs/api/: analytics.md  cli.md  collectors.md  core.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: laboratory-mode.md  overview.md
ebpf/: sched_collector.py
ebpf/loader/: __init__.py  loader.py
ebpf/programs/: Makefile  gpu_mem.bpf.c  sched_trace.bpf.c
examples/: README.md
examples/notebooks/: 01_quickstart.ipynb  02_advanced_profiling.ipynb  03_custom_collectors.ipynb
examples/scripts/: compare_sessions.py  profile_model.py
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
kernel/: Makefile  aaco_driver.c  aaco_driver.h
kernel/aaco_kmod/: Makefile  aaco_kmod.c  aaco_kmod.h
scripts/: prepare_system.sh  run_demo.sh
search/: search_index.json
sessions/: README.md  example_session.json  session_schema.json
site/: 404.html  gen_ref_pages.py  objects.inv  sitemap.xml
site/api/analytics/: index.html
site/api/collectors/: index.html
site/api/core/: index.html
site/architecture/: index.html
site/bottleneck_taxonomy/: index.html
site/data_schema/: index.html
site/methodology/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
site/user-guide/overview/: index.html
tests/: __init__.py  conftest.py
tests/benchmarks/: test_performance.py
tests/integration/: test_integration.py
tests/unit/: test_analytics.py  test_cli.py  test_collectors.py  test_core.py  test_observatory.py  test_statistics.py
user-guide/laboratory-mode/: index.html
