[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aaco"
version = "1.0.0"
description = "AMD AI Compute Observatory - Full-stack observability and performance intelligence for AMD AI workloads"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sudheer Devu"}
]
keywords = [
    "amd", "rocm", "gpu", "profiling", "observability",
    "ai", "inference", "performance", "benchmark",
    "onnx", "migraphx", "kernel", "tracing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Hardware",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
onnx = [
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
]
dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "shap>=0.43.0",
]
ebpf = [
    "bcc>=0.28.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]
all = [
    "aaco[onnx,dashboard,ml,dev]",
]

[project.scripts]
aaco = "aaco.cli:main"

[project.urls]
Homepage = "https://github.com/sudheerdevu/AMD-AI-Compute-Observatory"
Repository = "https://github.com/sudheerdevu/AMD-AI-Compute-Observatory"
Documentation = "https://github.com/sudheerdevu/AMD-AI-Compute-Observatory/tree/master/docs"
Issues = "https://github.com/sudheerdevu/AMD-AI-Compute-Observatory/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aaco*"]

[tool.setuptools.package-data]
aaco = ["report/templates/*.j2", "report/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "rocm: marks tests requiring ROCm",
    "integration: marks integration tests",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | sessions
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "build", "dist", "sessions"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["sessions", "build", "dist"]

[tool.coverage.run]
source = ["aaco"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
